# smarcretary

./: .gitignore  README.md  setup-network.sh
backend/smartcretary/: README.md  __init__.py  main.py  pyproject.toml  run.py  transcriber.py
backend/smartcretary/signaling/: __init__.py  manager.py  routes.py
backend/smartcretary/vision/: __init__.py  object_detection.py
backend/smartcretary/voice/: __init__.py  api_transcriber.py  transcriber.py
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/[room-id]/: page.tsx
frontend/app/components/: ControlOverlay.tsx  MeetingNotesDialog.tsx  MeetingSidebar.tsx  landing-page.tsx  meeting-room.tsx
frontend/app/components/landing-page/: FeaturesCard.tsx  JoinRoomCard.tsx  LandingPageHeader.tsx  LandingPageInstructions.tsx
frontend/app/components/meeting-room/: MeetingHeader.tsx  MeetingInfoOverlay.tsx  PiPVideo.tsx  VideoTile.tsx
frontend/app/components/ui/: dialog.tsx  shadcn-dialog.tsx
frontend/app/hooks/: useSocket.ts  useWebRTC.ts
frontend/components/ui/: VideoThumbnail.tsx
frontend/hooks/: useUrlParams.ts
smartcretary/: pyproject.toml  realtime_transcribe.py  transcriber.py
