[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartcretary"
version = "0.1.0"
description = "Smart Secretary WebRTC Video Conferencing Backend"
requires-python = ">=3.8.1"
license = {text = "MIT"}
authors = [
    {name = "Smart Secretary Team"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = []
target-version = "py38"

[tool.hatch.build.targets.wheel]
packages = ["smartcretary"]
